force-app/zurich-base/main/default/objects/Scope_Setting__mdt/Scope_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Información sobre los scopes de Zurich Empresas para crear los registros en función del campo BusinessCode recibido en el formulario web</description>
    <label>Scope Setting</label>
    <pluralLabel>Scope Settings</pluralLabel>
</CustomObject>