force-app/zurich-base/main/default/objects/Scope_Setting__mdt/fields/AvailableForLeadCreationFlow__c.field-meta.xml
<CustomField>
    <fullName>AvailableForLeadCreationFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marca si el registro de scope está disponible para seleccionar en el flow de creación de leads. Si está marcada a true, aparecerá en la picklist de ámbito.</description>
    <label>Is Available For Lead Creation Flow</label>
    <type>Checkbox</type>
</CustomField>