force-app/zurich-base/main/default/objects/Scope_Setting__mdt/fields/GenesysCloudQueueName__c.field-meta.xml
<CustomField>
    <fullName>GenesysCloudQueueName__c</fullName>
    <description>Nombre de la cola de Genesys correspondiente para el scope/businesCode</description>
    <label>Genesys Cloud Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>