force-app/zurich-base/main/default/objects/Scope_Setting__mdt/fields/SandboxBusinessCode__c.field-meta.xml
<CustomField>
    <fullName>SandboxBusinessCode__c</fullName>
    <label>Sandbox Business Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>