force-app/zurich-base/main/default/objects/Scope_Setting__mdt/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <length>50</length>
    <type>Text</type>
</CustomField>