force-app/zurich-base/main/default/objects/Scope_Setting__mdt/fields/Scope_Name__c.field-meta.xml
<CustomField>
    <fullName>Scope_Name__c</fullName>
    <label>Scope Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>