force-app/zurich-base/main/default/objects/Scope_Setting__mdt/listViews/All_Information.listView-meta.xml
<ListView>
    <fullName>All_Information</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>BusinessCode__c</columns>
    <columns>Scope__c</columns>
    <columns>Scope_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Information</label>
    <language>en_US</language>
</ListView>